Guava migration - Fix lingering build errors